# simulation-bench

./: .dockerignore  .gitignore  AGENTS.md  Caddyfile  Dockerfile  MANIFEST.json  Makefile  README.md  RUN_PROTOCOL.md  SCORING_GUIDE.md  benchmark_config.yaml  conceptual_model.md  fly.toml  pyproject.toml
.beads/: issues.jsonl  metadata.json
dashboard/: .gitignore  astro.config.mjs  package-lock.json  package.json  tsconfig.json
docs/: why_simulation_bench.md
harness/: README.md  build_dashboard.py  evaluate_submission.py  loc_counter.py  make_leaderboard_row.py  measure_run.py  normalize_tokens.py  record_score.py  scoreboard.py  scores_db.py  summary_schema.py
mine_simulation/: config.py  metrics.py  runner.py  simulation.py  topology.py  truck.py
submissions/2026-04-30__001_synthetic_mine_throughput__claude-code__claude-opus-4-7__ouroboros-max-thinking/: .gitignore  README.md  conceptual_model.md  pyproject.toml  pytest.ini  requirements.txt  results.csv  seed.yaml  submission.yaml  summary.json
submissions/2026-04-30__001_synthetic_mine_throughput__claude-code__claude-opus-4-7__ouroboros-max-thinking/data/: nodes.csv
submissions/2026-04-30__001_synthetic_mine_throughput__claude-code__claude-opus-4-7__ouroboros-max-thinking/data/scenarios/: ramp_closed.yaml  trucks_12_ramp_upgrade.yaml
submissions/2026-04-30__001_synthetic_mine_throughput__claude-code__claude-opus-4-7__ouroboros-max-thinking/results/: evaluation_report.json
submissions/2026-04-30__001_synthetic_mine_throughput__claude-code__claude-opus-4-7__ouroboros-max-thinking/scripts/: refresh_summary_narrative.py  render_animation.py  render_topology.py  verify_reproducibility.sh
submissions/2026-04-30__001_synthetic_mine_throughput__claude-code__claude-opus-4-7__ouroboros-max-thinking/src/mine_sim/: __init__.py  __main__.py  aggregate.py  cli.py  events.py  io_writers.py  metrics.py  model.py  rng.py  routing.py  runner.py  scenario_runner.py  scenarios.py  topology.py
submissions/2026-04-30__001_synthetic_mine_throughput__claude-code__claude-opus-4-7__ouroboros-max-thinking/tests/: test_aggregate.py  test_cli.py  test_io_writers.py  test_rng.py  test_runner.py  test_scenario_runner.py
(+317 files in other folders)
